web/src/global.less
@font-face {
  font-family: "AlibabaSans";
  font-style: normal;
  font-weight: 300;
  font-display: swap;
  src: url("//mdn.alipayobjects.com/huamei_iwk9zp/afts/file/A*1GSgSYDD_aIAAAAAQsAAAAgAegCCAQ/AlibabaSans-Light.woff2")
    format("woff2");
}
@font-face {
  font-family: "AlibabaSans";
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  src: url("//mdn.alipayobjects.com/huamei_iwk9zp/afts/file/A*2zEUQqnPNesAAAAAQtAAAAgAegCCAQ/AlibabaSans-Regular.woff2")
    format("woff2");
}
@font-face {
  font-family: "AlibabaSans";
  font-style: normal;
  font-weight: 500;
  font-display: swap;
  src: url("//mdn.alipayobjects.com/huamei_iwk9zp/afts/file/A*E_cxRbMlZqUAAAAAQuAAAAgAegCCAQ/AlibabaSans-Medium.woff2")
    format("woff2");
}
@font-face {
  font-family: "AlibabaSans";
  font-style: normal;
  font-weight: 600;
  font-display: swap;
  src: url("//mdn.alipayobjects.com/huamei_iwk9zp/afts/file/A*E_cxRbMlZqUAAAAAQuAAAAgAegCCAQ/AlibabaSans-Bold.woff2")
    format("woff2");
}
@font-face {
  font-family: "AlibabaSans";
  font-style: normal;
  font-weight: 700;
  font-display: swap;
  src: url("//mdn.alipayobjects.com/huamei_iwk9zp/afts/file/A*E_cxRbMlZqUAAAAAQuAAAAgAegCCAQ/AlibabaSans-Heavy.woff2")
    format("woff2");
}

html,
body,
#root {
  height: 100%;
  margin: 0;
  padding: 0;
  font-family:
    AlibabaSans, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans',
    sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
}

.colorWeak {
  filter: invert(80%);
}

.ant-layout {
  min-height: 100vh;
}
.ant-pro-sider.ant-layout-sider.ant-pro-sider-fixed {
  left: unset;
}

canvas {
  display: block;
}

ul,
ol {
  list-style: none;
}

@media (max-width: 768px) {
  .ant-table {
    width: 100%;
    overflow-x: auto;
    &-thead > tr,
    &-tbody > tr {
      > th,
      > td {
        white-space: pre;
        > span {
          display: block;
        }
      }
    }
  }
}

